# SWV

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_EXAMPLES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  ENVIRONMENTAL_MONITORING.md  LICENSE  Makefile  QUICKSTART.md  README-ANDROID.md  README.md  SECURITY.md  SETUP_COMPLETE.md  START_HERE.txt  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test.db  test_detection.py  test_environmental.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
android/: build.gradle  build.gradle.kts  local.properties.template  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/swv/api/: ApiClient.kt  (+1 more)
android/app/src/main/res/drawable/: rounded_button.xml
android/app/src/main/res/layout/: activity_capture.xml  activity_dashboard.xml  activity_main.xml  activity_report.xml  fragment_report_detail.xml  item_report.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/src/main/: AndroidManifest.xml
android/src/main/res/values/: strings.xml
backend/: main.py  security.py
backend/benchmarks/: __init__.py  load_test.py  performance_benchmark.py  scalability_analysis.py
backend/config/: security.py  settings.py
backend/middleware/: security_headers.py
backend/routes/: detection.py  environmental.py  health.py  monitoring.py
backend/scripts/: __init__.py  init_db.py  profile_endpoints.py
backend/services/: air_quality.py  cache.py  detection.py  geolocation.py  redis_rate_limiter.py  report_generator.py  resilience.py
backend/tests/: __init__.py  conftest.py  test_air_quality.py  test_cache.py  test_geolocation.py  test_integration.py  test_security.py
backend/utils/: logging.py
nginx/: nginx.conf
scripts/: download_model.py  setup_dev.ps1  setup_dev.sh
(+15 files in other folders)
